--- a/toriwatch/manifest.json
+++ b/toriwatch/manifest.json
@@ -1,26 +1,38 @@
 {
-    "manifest_version": 3,
-    "name": "toriwatch",
-    "version": "1.0",
-    "description": "Displays the predicted bot percentage of an account in X.",
-    "permissions": ["storage"],
-    "host_permissions": ["<all_urls>"],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
-      }
+  "manifest_version": 3,
+  "name": "Twitter Bot Detector",
+  "description": "Test extension.",
+  "version": "0.0.1",
+  "permissions": ["storage", "tabs", "activeTab", "scripting"],
+  "host_permissions": ["https://*.x.com/*"],
+  "background": {
+    "service_worker": "src/_util/background.js"
+  },
+  "icons": {
+    "16": "./public/IMG/icon16.png",
+    "48": "./public/IMG/icon48.png",
+    "128": "./public/IMG/icon128.png"
+  },
+  "action": {
+    "default_icon": {
+      "16": "./public/IMG/icon16.png",
+      "48": "./public/IMG/icon48.png",
+      "128": "./public/IMG/icon128.png"
     },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ]
-  }
-  
+    "default_title": "Twitter Bot Detector",
+    "default_popup": "./src/app/popup/popup.html"
+  },
+  "content_scripts": [{
+    "matches": ["https://*.x.com/*"],
+    "js": ["./extension/content.js"]
+  }],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "src/content_scripts/domUtils.js",
+        "src/content_scripts/observer.js",
+        "src/content_scripts/queue.js"
+      ],
+      "matches": ["https://*.x.com/*"]
+    }]
+}
