--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL="mongodb+srv://sheensenorin:<db_CJEl8tFLYP5fLPIF>@tori-db.vo3pe.mongodb.net/?retryWrites=true&w=majority&appName=tori-db"
+MONGODB_URL="mongodb+srv://sheensenorin:CJEl8tFLYP5fLPIF@tori-db.vo3pe.mongodb.net/"
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
