--- a/.env
+++ b/.env
@@ -1,3 +1,22 @@
 MONGODB_URL="mongodb+srv://sheensenorin:CJEl8tFLYP5fLPIF@tori-db.vo3pe.mongodb.net/"
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
+LOG_LEVEL=INFO
+
+REGION=FILLIN
+PROJECT_NAME="ToriWatch"
+RAW_BUCKET=FILLIN
+ARTIFACTS_BUCKET=FILLIN
+OUTPUT_BUCKET=FILLIN
+
+[twitter]
+CONSUMER_KEY = W2YXs6SqhsQuswPrjgdyC3GRQ
+CONSUMER_SECRET = 61SOq4em2CiQjlIh1lNqs76qMBUwSQL61S9XRK4rb3nsab1hyE
+
+ACCESS_TOKEN = 1569207846893670400-BZKMpsnmkaqCWUYtVgGjeU6IPQa1qY
+ACCESS_TOKEN_SECRET = JMOnXtVkAAn2xRuHyKuK3HFdaKoUZcr25IK0HJg2LrHMn
+
+BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAcrqQEAAAAAAe0ucOX8MwNtA8QMqFFDeiy3iA4%%3DX4wLhoYZ5p6ZoOleZeTICv7oi09gvd6g7hFuW8mVNsHojYq6xy
+
+client_secret =qF-I6fm1cTfFs1NCGoX8_EPRPIrKg7UfjvWJaSvl5seL9Ci21f
+client_id = MlNJUWNaLWtIWXVLSEZsQmIxeVA6MTpjaQ
